fixed sqrt bug